k8s/manifest/base/app/web-dashbaord/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dashboard
  labels:
    app: web-dashboard
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0%
      maxSurge: 10%
  selector:
    matchLabels:
      app: web-dashboard
  template:
    metadata:
      labels:
        app: web-dashboard
    spec:
      containers:
        - name: nginx
          image: nginx:1.31.6-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 32M
            limits:
              cpu: 100m
              memory: 32M
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: var-run
              mountPath: /var/run
            - name: web-dashboard-nginx-volume
              mountPath: /usr/share/nginx/html
            - name: var-cache-nginx
              mountPath: /var/cache/nginx
      volumes:
        - name: var-cache-nginx
          emptyDir: {}
        - name: var-run
          emptyDir: {}
        - name: web-dashboard-nginx-volume
          configMap:
            name: web-dashboard-nginx-cm

---

apiVersion: v1
kind: Service
metadata:
  name: web-dashboard-svc
spec:
  selector:
    app: web-dashboard
  ports:
    - port: 80
